switching data to a csv file, rds not working on windows

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 .Ruserdata
 data/nplcc/
 data/cdf/
-data/nplcc_cost_occupancy.rds
+data/nplcc_cost_occupancy*
 output/gurobi/
 output/rsymphony/
 output/marxan/
